# airi-voice-module

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: ARCHITECTURE.md  PHASE-1-DESIGN.md  PHASE-1-TEST-REPORT.md  PHASE-2-STT-DETAILED-DESIGN.md  PHASE-2-STT-TEST-REPORT.md  PHASE-2-STT.md  PHASE-3-TTS-TEST-REPORT.md  PHASE-3-TTS.md  SESSION-REPORT-2026-07-24.md  TASK-PROGRESS-REPORT.md
scripts/: download_models.py
src/: __init__.py  config.py  logger.py  main.py
src/airi/: __init__.py  websocket_client.py
src/audio/: __init__.py  capture.py  playback.py  resampler.py
src/pipeline/: __init__.py  audio_pipeline.py  ring_buffer.py
src/stt/: __init__.py  faster_whisper_stt.py  post_processor.py
src/tts/: __init__.py  cosyvoice_tts.py  tts_engine.py  tts_manager.py
src/vad/: __init__.py  silero_vad.py
tests/: __init__.py  test_airi_client.py  test_capture.py  test_env_check.py  test_mic_level.py  test_pipeline.py  test_stt.py  test_stt_download.py  test_stt_inference.py  test_stt_integration.py  test_tts.py  test_tts_integration.py  test_vad.py  test_vad_diagnostic.py  test_vad_model_compare.py
